FF31 extra credit solved

--- a/album.html
+++ b/album.html
@@ -38,13 +38,13 @@
          <section class="player-bar">
              <div class="container">
                  <div class="control-group main-controls">
-                   <a class="previous">
+                   <a class="button previous">
                         <span class="ion-skip-backward"></span>
                     </a>
                     <a class="play-pause">
                         <span class="ion-play"></span>
                     </a>
-                    <a class="next">
+                    <a class="button next">
                         <span class="ion-skip-forward"></span>
                     </a>
                  </div>
